# opengeospatial-geoparquet

./: .pre-commit-config.yaml  CHANGELOG.md
scripts/: pyproject.toml
